# nocur

./: .env.example  .gitignore  @claude.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  VISION.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
claude-service/: package.json  pnpm-lock.yaml
claude-service/src/: index.ts
claude-service/src/ace/: curator.ts  index.ts  playbook.ts  reflector.ts  types.ts
claude-service/src/lsp/: index.ts  manager.ts  protocol.ts  tools.ts  xcode-setup.ts
docs/: AGENT_GUIDE.md  COMMANDS.md
mcp-server/: claude-code-config.example.json  index.ts
nocur-swift/: Package.swift
nocur-swift/Sources/CLI/: NocurCLI.swift
nocur-swift/Sources/Core/: Errors.swift  Output.swift  Shell.swift
nocur-swift/Tests/NocurTests/: SimulatorControllerTests.swift  UIInteractorTests.swift  ViewInspectorTests.swift
sample-app/: .gitignore  CLAUDE.md  Project.swift
sample-app/NocurTestApp/: ChatArchitecture.swift  ContentView.swift  ContentView_OLD.swift  Info.plist  NocurTestApp.entitlements  NocurTestAppApp.swift
sample-app/NocurTestApp.xcodeproj/: project.pbxproj
sample-app/NocurTestApp/Models/: AIModelType.swift  Attachment.swift  ChatMessage.swift
sample-app/NocurTestApp/Services/: AIModelFactory.swift  AIModelProtocol.swift  AppleFoundationModelService.swift  ChatGPTModelService.swift  LocalDemoModelService.swift
sample-app/NocurTestApp/Utilities/: MathHelper.swift
sample-app/NocurTestApp/ViewModels/: ChatViewModel.swift
sample-app/NocurTestApp/Views/: ChatView.swift  SettingsView.swift
src/: App.tsx  main.tsx  wdyr.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ace.rs  claude.rs  lib.rs  menu.rs  paths.rs  permissions.rs  project.rs  window_capture.rs
src/components/: BottomPanel.tsx  ChatContextModal.tsx  ContextReviewModal.tsx  DeviceSelector.tsx  DiffViewer.tsx  HistorySidebar.tsx  NewProjectModal.tsx  Onboarding.tsx  OpenInDropdown.tsx  PlaybookModal.tsx  SkillsModal.tsx  WelcomeScreen.tsx  XTerminal.tsx
src/components/panes/: AgentPane.tsx  (+3 more)
src/lib/: debug.ts  project-context.tsx
src/styles/: globals.css
(+24 files in other folders)
