[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.10"
plist = "1.6"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }
ignore = "0.4"
tauri-plugin-pty = "0.1.1"
tauri-plugin-os = "2.3.2"

# macOS window capture
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"
image = "0.25"
foreign-types-shared = "0.3"
