[package]
name = "app"
version = "0.1.0"
description = "Nocur - AI-powered iOS development verification"
authors = ["Compiler Inc"]
license = "MIT"
repository = "https://github.com/Compiler-Inc/nocur"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.10"
plist = "1.6"
parking_lot = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["sync"] }
ignore = "0.4"
tauri-plugin-pty = "0.1.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
